--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-21  Richard Henderson  <rth@redhat.com>
+
+	* jcf-parse.c (get_constant): Decode from IEEE no matter 
+	what the target format.
+
 2002-09-20  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* ChangeLog: Follow spelling conventions.
