--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-2002-09-20  Nathanael Nerode <neroden@doctor.moo.mud.org>
+2002-07-12  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* configure.in (*-*-netbsd*): Use noconfigdirs, not skipdirs.
+	* configure.in (sh*-*-pe*): Ditto.
+	* configure.in (mips*-*-pe*): Ditto.
+	* configure.in (*arm-wince-pe): Ditto.
+
+2002-09-20  Nathanael Nerode  <neroden@doctor.moo.mud.org>
 
 	* configure.in: Rearrange.
 
