--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,6 +1,7 @@
 2002-09-21  Richard Earnshaw  <rearnsha@arm.com>
 
-	* cse.c (fold_rtx): Calculate the old cost before we fold each
+	PR opt/7930
+	* cse.c (fold_rtx): Calculate old_cost before we fold each
 	operand.
 
 2002-09-21  Richard Henderson  <rth@redhat.com>
