--- a/gcc/ChangeLog.2
+++ b/gcc/ChangeLog.2
@@ -3567,7 +3567,7 @@ Sat Oct 30 14:31:48 1999  Richard Henderson  <rth@cygnus.com>
 	(ggc_alloc_obj): Likewise.  Use a different pattern than poison_pages.
 	(ggc_collect): Poison before sweeping.
 	* ggc-simple.c: Update pre-function commentary.
-	(ggc_alloc_obj): Poison non-zeroed memory.
+	(ggc_alloc_obj): Poison nonzeroed memory.
 
 Sat Oct 30 14:28:52 1999  Mark Mitchell  <mark@codesourcery.com>
 
