--- a/gcc/ChangeLog.3
+++ b/gcc/ChangeLog.3
@@ -1353,7 +1353,7 @@ Wed Jun  7 20:34:33 2000  Denis Chertykov  <denisc@overta.ru>
 	* c-common.h (c_language_kind): New type.
 	(c_language): New variab.e
 	* c-common.c (lang_get_alias_set): Don't put structures in
-	non-zero alias sets in C++.
+	nonzero alias sets in C++.
 	* c-decl.c (c_language): Define it.
 	* c-lex.c (doing_objc_thang): Remove.
 	* c-tree.h (doing_objc_thang): Make it a macro.
@@ -1538,7 +1538,7 @@ Mon Jun  5 06:46:28 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 2000-06-04  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
-	* Makefile.in (intl.*): Honor non-zero exit codes in the intl
+	* Makefile.in (intl.*): Honor nonzero exit codes in the intl
 	subdir.
 
 2000-06-03  Geoff Keating  <geoffk@cygnus.com>
@@ -7957,7 +7957,7 @@ Wed Apr  5 18:03:31 2000  Toshiyasu Morita  (toshi.morita@sega.com)
 2000-04-05  Chris Demetriou  <cgd@netbsd.org>
 
 	* mips.h (MASK_DEBUG_A, MASK_DEBUG_B, MASK_DEBUG_C): Zero the
-	remaining non-zero debugging masks.
+	remaining nonzero debugging masks.
 
 Wed Apr  5 09:44:07 2000  Jeffrey A Law  (law@cygnus.com)
 
