--- a/gcc/ChangeLog.4
+++ b/gcc/ChangeLog.4
@@ -2120,7 +2120,7 @@ Tue Dec  5 20:09:14 2000  Jeffrey A Law  (law@cygnus.com)
 	(expand_builtin_strrchr): Use it.
 	(builtin_memset_read_str): New function.
 	(expand_builtin_memset): Use target_char_cast.
-	Try to optimize memset with second argument non-zero using
+	Try to optimize memset with second argument nonzero using
 	store_by_pieces.
 
 2000-11-30  Marek Michalkiewicz  <marekm@linux.org.pl>
@@ -13799,7 +13799,7 @@ Wed Jul 19 01:22:15 CEST 2000  Marc Espie  <espie@cvs.openbsd.org>
 
 2000-07-18  Jakub Jelinek  <jakub@redhat.com>
 
-	* calls.c (store_arg): Return non-zero if sibcall_failure is desired.
+	* calls.c (store_arg): Return nonzero if sibcall_failure is desired.
 	(expand_call): Adjust caller.
 
 2000-07-17  Gabriel Dos Reis  <gdr@codesourcery.com>
