--- a/gcc/ChangeLog.6
+++ b/gcc/ChangeLog.6
@@ -16219,7 +16219,7 @@ Thu Jul 26 14:04:03 EDT 2001  John Wehle  (john@feith.com)
 	* flow.c (update_life_info): Simplify the CFG and
 	recalculate the global regs which are alive when
 	removing dead code during a global update.
-	(propagate_block): Return non-zero if an INSN is
+	(propagate_block): Return nonzero if an INSN is
 	deleted.
 
 2001-07-26  Rainer Orth <ro@TechFak.Uni-Bielefeld.DE>
