* gcc.dg/20020219-1.c: Add "-mdisable-indexing" option for target 	hppa*-*-hpux*.  Update test comment.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57415 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-22  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* gcc.dg/20020219-1.c: Add "-mdisable-indexing" option for target
+	hppa*-*-hpux*.  Update test comment.
+
 2002-09-20  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/tls/struct-1.c: New test.
