boehm-gc: 	* Makefile.am (all-multi): Fix multilib parallel build. libf2c: 	* Makefile.in (all): Fix multilib parallel build. libffi: 	* Makefile.am (all-multi): Fix multilib parallel build. libiberty: 	* Makefile.in (all): Fix multilib parallel build. libjava: 	* Makefile.am (all-multi): Fix multilib parallel build. libobjc: 	* Makefile.in (all): Fix multilib parallel build. libstdc++-v3: 	* Makefile.am (all-multi): Fix multilib parallel build. zlib: 	* Makefile.am (all-multi): Fix multilib parallel build.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57423 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep 22 23:43:37 2002  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (all): Fix multilib parallel build.
+
 2002-09-14  Tim Prince  <tprince@computer.org>
 
 	PR libf2c/7384
