--- a/libobjc/ChangeLog
+++ b/libobjc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (all): Fix multilib parallel build.
+
 Thu Sep 12 12:44:37 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* sendmsg.c (nil_method): Declare not to take a variable number of
