* c-common.c (flag_abi_version): New variable. 	* c-common.h (flag_abi_version): Declare it. 	* c-opts.c (missing_arg): Add -fabi-version. 	(c_common_decode_option): Process -fabi-version. 	* doc/invoke.texi (-fabi-version): Document it. 	(-Wabi): Add information about bit-fields in unions.
	* cp/class.c (layout_virtual_bases): Do not round the size of the
	type to a multiple of the alignment before laying out virtual bases.
	(layout_class_type): Correct handling of bit-fields that are wider
	than their type inside unions.  Round the size of the type to a
	even number of bytes when computing the size without virtual
	bases.
	* cp/cp-tree.h (abi_version_at_least): New macro.

	* g++.dg/abi/bitfield6.C: New test.
	* g++.dg/abi/bitfield7.C: New test.
	* g++.dg/abi/bitfield8.C: New test.
	* g++.dg/abi/vbase11.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57432 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-23  Mark Mitchell  <mark@codesourcery.com>
+
+	* c-common.c (flag_abi_version): New variable.
+	* c-common.h (flag_abi_version): Declare it.
+	* c-opts.c (missing_arg): Add -fabi-version.
+	(c_common_decode_option): Process -fabi-version.
+	* doc/invoke.texi (-fabi-version): Document it.
+	(-Wabi): Add information about bit-fields in unions.
+	
 2002-09-22  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* config/mips/netbsd.h (SUBTARGET_ASM_SPEC): Always pass -KPIC
